# apps/api/src/moderation/moderation.module.ts
@@ -1,0 +1,7 @@
+import { Module } from '@nestjs/common'
+import { ModerationController } from './moderation.controller'
+
+@Module({
+  controllers: [ModerationController],
+})
+export class ModerationModule {}
